# kisiac

./: CHANGELOG.md  pyproject.toml  test.py  test.sh
.github/workflows/: release-please.yml  test.yml
.test/repo/infrastructure/all/: kisiac.yaml
.test/repo/infrastructure/all/hosts/all/user_files/.config/snakemake/default/: config.yaml
src/kisiac/: cli.py  common.py  config.py  filesystems.py  lvm.py  runtime_settings.py  to_sh.py  update.py  users.py
src/kisiac/files/: kisiac.sh.j2
