[project]
authors = [{name = "Johannes Koester", email = "johannes.koester@uni-due.de"}]
dependencies = ["pyyaml>=6.0.3,<7", "jinja2>=3.1.6,<4", "gitpython>=3.1.45,<4", "simple-parsing>=0.1.7,<0.2"]
name = "kisiac"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
kisiac = { path = ".", editable = true }

[tool.pixi.feature.dev.tasks]
format = "ruff format src"
check = "ruff check src"

[dependency-groups]
dev = ["ruff"]

[tool.pixi.environments]
dev = ["dev"]
